# name: TestCreate.test_force_reset[False]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestCreate.test_force_reset[True]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestCreate.test_no_force_reset
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bill',
    'last_password_change': <class 'datetime'>,
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test[administrator][db]
  <class 'dict'> {
    '_id': 'abc123',
    'active': True,
    'administrator': True,
    'force_reset': False,
    'groups': <class 'list'> [
      'peasants',
    ],
    'handle': 'bob',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'password': 'hashed_password',
    'primary_group': '',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test[administrator][obj]
  <class 'dict'> {
    'active': True,
    'administrator': True,
    'administrator_role': <AdministratorRole.FULL: 'full'>,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'peasants',
        'name': 'peasants',
      },
    ],
    'handle': 'bob',
    'id': 'abc123',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test[force_reset][db]
  <class 'dict'> {
    '_id': 'abc123',
    'active': True,
    'administrator': False,
    'force_reset': True,
    'groups': <class 'list'> [
      'peasants',
    ],
    'handle': 'bob',
    'invalidate_sessions': True,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'password': 'hashed_password',
    'primary_group': '',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test[force_reset][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': True,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'peasants',
        'name': 'peasants',
      },
    ],
    'handle': 'bob',
    'id': 'abc123',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: TestUpdate.test[groups][db]
  <class 'dict'> {
    '_id': 'abc123',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'peasants',
      'kings',
    ],
    'handle': 'bob',
    'invalidate_sessions': False,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'password': 'hashed_password',
    'primary_group': 'peasants',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test[groups][obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
      <class 'dict'> {
        'id': 'peasants',
        'name': 'peasants',
      },
      <class 'dict'> {
        'id': 'kings',
        'name': 'kings',
      },
    ],
    'handle': 'bob',
    'id': 'abc123',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': True,
      'create_sample': True,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': <class 'dict'> {
      'id': 'peasants',
      'name': 'peasants',
    },
  }
---
# name: TestUpdate.test_password[db]
  <class 'dict'> {
    '_id': 'abc123',
    'active': True,
    'administrator': False,
    'force_reset': False,
    'groups': <class 'list'> [
      'peasants',
    ],
    'handle': 'bob',
    'invalidate_sessions': True,
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'primary_group': '',
    'settings': <class 'dict'> {
      'quick_analyze_workflow': 'pathoscope_bowtie',
      'show_ids': True,
      'show_versions': True,
      'skip_quick_analyze_dialog': True,
    },
  }
---
# name: TestUpdate.test_password[obj]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': None,
    'b2c_family_name': None,
    'b2c_given_name': None,
    'b2c_oid': None,
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': 'bob',
    'id': 'abc123',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_find_or_create_b2c_user[False]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Fred',
    'b2c_family_name': 'Smith',
    'b2c_given_name': 'Fred',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': <class 'str'>,
    'id': 'fb085f7f',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
# name: test_find_or_create_b2c_user[True]
  <class 'dict'> {
    'active': True,
    'administrator': False,
    'administrator_role': None,
    'b2c': None,
    'b2c_display_name': 'Bilbo',
    'b2c_family_name': 'Baggins',
    'b2c_given_name': 'Bilbo',
    'b2c_oid': 'abc123',
    'force_reset': False,
    'groups': <class 'list'> [
    ],
    'handle': <class 'str'>,
    'id': 'bf1b993c',
    'last_password_change': datetime.datetime(2015, 10, 6, 20, 0),
    'permissions': <class 'dict'> {
      'cancel_job': False,
      'create_ref': False,
      'create_sample': False,
      'modify_hmm': False,
      'modify_subtraction': False,
      'remove_file': False,
      'remove_job': False,
      'upload_file': False,
    },
    'primary_group': None,
  }
---
